sentry_ws/log/build_2026-07-05_20-33-05/can_comm/stdout_stderr.log
-- Found ament_cmake: 1.3.14 (/opt/ros/humble/share/ament_cmake/cmake)
-- Found rclcpp: 16.0.19 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.9 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.9 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.9 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.10 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found geometry_msgs: 4.9.1 (/opt/ros/humble/share/geometry_msgs/cmake)
-- Found sentry_msgs: 0.0.2 (/home/chen/sentry_try/sentry_ws/install/sentry_msgs/share/sentry_msgs/cmake)
-- Found tf2_ros: 0.25.20 (/opt/ros/humble/share/tf2_ros/cmake)
-- Found tf2_geometry_msgs: 0.25.20 (/opt/ros/humble/share/tf2_geometry_msgs/cmake)
-- Found eigen3_cmake_module: 0.1.1 (/opt/ros/humble/share/eigen3_cmake_module/cmake)
-- Ensuring Eigen3 include directory is part of orocos-kdl CMake target
-- Found nav2_msgs: 1.1.20 (/opt/ros/humble/share/nav2_msgs/cmake)
-- Configuring done
-- Generating done
-- Build files have been written to: /home/chen/sentry_try/sentry_ws/build/can_comm
gmake[2]: 警告：文件“/home/chen/sentry_try/sentry_ws/src/can_comm/src/target_frame_node.cpp”的修改时间在未来 7561 秒后
Consolidate compiler generated dependencies of target can_receive_node
Consolidate compiler generated dependencies of target can_send_node
Consolidate compiler generated dependencies of target vyaw_tf_yaw_controller_node
[ 12%] Building CXX object CMakeFiles/target_frame_node.dir/src/target_frame_node.cpp.o
[ 87%] Built target vyaw_tf_yaw_controller_node
[ 87%] Built target can_receive_node
[ 87%] Built target can_send_node
In file included from /home/chen/sentry_try/sentry_ws/src/can_comm/src/target_frame_node.cpp:11:
/opt/ros/humble/include/tf2_geometry_msgs/tf2_geometry_msgs/tf2_geometry_msgs.h:35:2: warning: #warning This header is obsolete, please include tf2_geometry_msgs/tf2_geometry_msgs.hpp instead [-Wcpp]
   35 | #warning This header is obsolete, please include tf2_geometry_msgs/tf2_geometry_msgs.hpp instead
      |  ^~~~~~~
/home/chen/sentry_try/sentry_ws/src/can_comm/src/target_frame_node.cpp: In constructor ‘TargetFrameNode::TargetFrameNode()’:
/home/chen/sentry_try/sentry_ws/src/can_comm/src/target_frame_node.cpp:25:49: error: no matching function for call to ‘tf2_ros::Buffer::Buffer()’
   25 |     TargetFrameNode() : Node("target_frame_node")
      |                                                 ^
In file included from /opt/ros/humble/include/tf2_ros/tf2_ros/buffer.h:35,
                 from /home/chen/sentry_try/sentry_ws/src/can_comm/src/target_frame_node.cpp:9:
/opt/ros/humble/include/tf2_ros/tf2_ros/buffer.hpp:75:18: note: candidate: ‘tf2_ros::Buffer::Buffer(rclcpp::Clock::SharedPtr, tf2::Duration, rclcpp::Node::SharedPtr)’
   75 |   TF2_ROS_PUBLIC Buffer(
      |                  ^~~~~~
/opt/ros/humble/include/tf2_ros/tf2_ros/buffer.hpp:75:18: note:   candidate expects 3 arguments, 0 provided
/home/chen/sentry_try/sentry_ws/src/can_comm/src/target_frame_node.cpp:25:49: error: no matching function for call to ‘tf2_ros::TransformListener::TransformListener()’
   25 |     TargetFrameNode() : Node("target_frame_node")
      |                                                 ^
In file included from /opt/ros/humble/include/tf2_ros/tf2_ros/transform_listener.h:35,
                 from /home/chen/sentry_try/sentry_ws/src/can_comm/src/target_frame_node.cpp:8:
/opt/ros/humble/include/tf2_ros/tf2_ros/transform_listener.hpp:92:3: note: candidate: ‘template<class NodeT, class AllocatorT> tf2_ros::TransformListener::TransformListener(tf2::BufferCore&, NodeT&&, bool, const rclcpp::QoS&, const rclcpp::QoS&, const rclcpp::SubscriptionOptionsWithAllocator<AllocatorT>&, const rclcpp::SubscriptionOptionsWithAllocator<AllocatorT>&)’
   92 |   TransformListener(
      |   ^~~~~~~~~~~~~~~~~
/opt/ros/humble/include/tf2_ros/tf2_ros/transform_listener.hpp:92:3: note:   template argument deduction/substitution failed:
/home/chen/sentry_try/sentry_ws/src/can_comm/src/target_frame_node.cpp:25:49: note:   candidate expects 7 arguments, 0 provided
   25 |     TargetFrameNode() : Node("target_frame_node")
      |                                                 ^
In file included from /opt/ros/humble/include/tf2_ros/tf2_ros/transform_listener.h:35,
                 from /home/chen/sentry_try/sentry_ws/src/can_comm/src/target_frame_node.cpp:8:
/opt/ros/humble/include/tf2_ros/tf2_ros/transform_listener.hpp:89:12: note: candidate: ‘tf2_ros::TransformListener::TransformListener(tf2::BufferCore&, bool)’
   89 |   explicit TransformListener(tf2::BufferCore & buffer, bool spin_thread = true);
      |            ^~~~~~~~~~~~~~~~~
/opt/ros/humble/include/tf2_ros/tf2_ros/transform_listener.hpp:89:12: note:   candidate expects 2 arguments, 0 provided
/home/chen/sentry_try/sentry_ws/src/can_comm/src/target_frame_node.cpp:26:5: error: expected ‘{’ before ‘tf_buffer_’
   26 |     tf_buffer_(this->get_clock()),
      |     ^~~~~~~~~~
/home/chen/sentry_try/sentry_ws/src/can_comm/src/target_frame_node.cpp: In member function ‘void TargetFrameNode::onTimer()’:
/home/chen/sentry_try/sentry_ws/src/can_comm/src/target_frame_node.cpp:111:34: error: ‘deg2rad’ was not declared in this scope; did you mean ‘KDL::deg2rad’?
  111 |         const double pitch_rad = deg2rad(pitch_deg);
      |                                  ^~~~~~~
      |                                  KDL::deg2rad
In file included from /usr/include/kdl/frames.hpp:129,
                 from /opt/ros/humble/include/tf2_geometry_msgs/tf2_geometry_msgs/tf2_geometry_msgs.hpp:56,
                 from /opt/ros/humble/include/tf2_geometry_msgs/tf2_geometry_msgs/tf2_geometry_msgs.h:37,
                 from /home/chen/sentry_try/sentry_ws/src/can_comm/src/target_frame_node.cpp:11:
/usr/include/kdl/utilities/utility.h:189:21: note: ‘KDL::deg2rad’ declared here
  189 | extern const double deg2rad;
      |                     ^~~~~~~
gmake[2]: *** [CMakeFiles/target_frame_node.dir/build.make:76：CMakeFiles/target_frame_node.dir/src/target_frame_node.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:221：CMakeFiles/target_frame_node.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
